<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@color/app_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_11sdp"
            android:text="@string/app_name"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_13sdp"
            android:fontFamily="@font/dmsans_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/llAppBarIcons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/ivDownload"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_download"
                android:contentDescription="Download"
                android:layout_marginEnd="@dimen/_15sdp"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_8sdp"
                app:tint="@color/text_primary" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_share"
                android:contentDescription="Share"
                android:layout_marginEnd="@dimen/_12sdp"
                android:visibility="gone"
                app:tint="@color/text_primary" />

            <FrameLayout
                android:id="@+id/filterIconContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp">

                <!-- Your icon -->
                <ImageView
                    android:id="@+id/ivFilter"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_filter"
                    android:contentDescription="Filter"
                    android:visibility="gone"
                    app:tint="@color/text_primary"/>

                <!-- Small red dot -->
                <View
                    android:id="@+id/filterDot"
                    android:layout_width="@dimen/_6sdp"
                    android:layout_height="@dimen/_6sdp"
                    android:layout_gravity="top|end"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:background="@drawable/red_dot_background"
                    android:visibility="gone"/>
            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        app:layout_constraintTop_toBottomOf="@id/clAppBar"
        app:layout_constraintBottom_toTopOf="@id/llBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llBottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/app_bar_color"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:id="@+id/view"
            android:background="@color/app_bar_color"
            app:layout_constraintBottom_toTopOf="@id/llBottomNavigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_1sdp"
            android:elevation="@dimen/_5sdp"
            android:weightSum="4"
            android:background="@color/app_bar_color">

            <!-- Logs -->
            <LinearLayout
                android:id="@+id/logsFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_6sdp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bgLogs"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/tab_icon_background"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/ivLogs"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_call_log"
                        android:layout_gravity="center"
                        app:tint="@color/text_primary" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tvLogs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logs"
                    android:textAlignment="center"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/dmsans_medium"
                    android:textStyle="normal"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            </LinearLayout>

            <!-- Analytics -->
            <LinearLayout
                android:id="@+id/analyticsFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_6sdp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bgAnalytics"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/tab_icon_background"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/ivAnalytics"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/chart_pie"
                        android:layout_gravity="center"
                        app:tint="@color/text_primary"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/txtAnalytics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics"
                    android:textAlignment="center"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            </LinearLayout>

            <!-- Settings -->
            <LinearLayout
                android:id="@+id/settingsFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_6sdp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bgSettings"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/tab_icon_background"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/ivSettings"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/settings"
                        android:layout_gravity="center"
                        app:tint="@color/text_primary"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/tvSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            </LinearLayout>

            <!-- About -->
            <LinearLayout
                android:id="@+id/aboutFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_6sdp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bgAbout"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/tab_icon_background"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/ivAbout"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/about"
                        android:layout_gravity="center"
                        app:tint="@color/text_primary"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_10ssp"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>